[gd_scene load_steps=8 format=3 uid="uid://b6jrhnfuqnhdv"]

[ext_resource type="Script" uid="uid://d05ydhtk5rppy" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/card_cost.gd" id="1_et42j"]
[ext_resource type="FontFile" uid="uid://cf1pm48y6jlcm" path="res://Fonts/RasterForgeRegular-JpBgm.ttf" id="2_po2md"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="3_hm3sc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_et42j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kyms2"]
bg_color = Color(0, 0, 0, 0.917647)

[sub_resource type="LabelSettings" id="LabelSettings_uf11n"]
font = ExtResource("2_po2md")
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_hm3sc"]
font = ExtResource("2_po2md")
font_size = 32
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[node name="PanelContainer" type="PanelContainer"]
offset_right = 154.0
offset_bottom = 138.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_et42j")
script = ExtResource("1_et42j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="CardCostPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kyms2")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CardCostPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/CardCostPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="CostLabel" type="Label" parent="MarginContainer/CardCostPanel/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_uf11n")
horizontal_alignment = 1
autowrap_mode = 2

[node name="SVGIcon" parent="MarginContainer/CardCostPanel/MarginContainer/VBoxContainer2" instance=ExtResource("3_hm3sc")]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon = 71
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(30, 30)

[node name="CostAmount" type="Label" parent="MarginContainer/CardCostPanel/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "FREE"
label_settings = SubResource("LabelSettings_hm3sc")
horizontal_alignment = 1
vertical_alignment = 1
